	- Push down boolean tests in WHERE clauses where possible
	- Prevent tables defined as queries from being set as "updatable = 'true'"
	- Explicitly reject INSERT with ON CONFLICT clause
	- When analyzing a foreign table, only retrieve the columns defined in
	  that table
	- Have EXPLAIN for a remote modify show the Firebird query used
	- Add support for implicit boolean columns
	- Add support for PostgreSQL 13
	- Fix UPDATE statements where a BEFORE ROW UPDATE trigger is present

1.1.0	2019-05-31
	- Add utility function "firebird_fdw_close_connections()"
	- Add utility function "firebird_fdw_diag()"
	- Adapt code to deal with tuple-level OID removal in PostgreSQL 12
	- Support for heap access method changes in PostgreSQL 12

1.0.0	2018-11-09
	- Support Firebird BOOLEAN datatype (Firebird 3.0 and later)
	- Improve "IMPORT FOREIGN SCHEMA" implementation
	- Add table option "estimated_row_count"
	- Improve handling of foreign tables defined as Firebird queries
	- Support PostgreSQL 11
	- Adapt code to compile against current PostgreSQL HEAD
	- Avoid segfault if not all expected Firebird connection parameters
	  were supplied

0.5.0	2018-10-12
	- Support triggers on foreign tables (PostgreSQL 9.4 and later)
	- Support Firebird BLOB datatype (TEXT subtype only)

0.4.0   2018-10-02
	- Add function firebird_fdw_version()
	- Add TAP tests
	- Fix bug in INSERT ... RETURNING ...
	- Miscellaneous minor bug fixes and code cleanup

0.3.0   2018-04-22
	- Support PostgreSQL 9.6 and 10
	- Add support for IMPORT FOREIGN SCHEMA (PostgreSQL 9.5 and later)
	- Ensure tables defined with the 'query' option actually work
	- Automatically reconnect if Firebird goes away
	- Update function calls for changes in libfq 0.2.0
	- Improve SIGINT handling
	- Improve error message handling
	- Fix memory error when generating connection string
	- Fix crash when multibyte string overflows (GitHub #5)
	- Report transaction errors as actual errors; log harmless